--- a/docs/index.tex
+++ b/docs/index.tex
@@ -1003,7 +1003,7 @@ Rows as sequence of sequences
 \end{Shaded}
 
 \begin{verbatim}
-([#object[java.time.LocalDate 0x6d0fa21b "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x24ce4266 "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
+([#object[java.time.LocalDate 0x1172b06c "2012-01-01"] 0.0 12.8 5.0 4.7 "drizzle"] [#object[java.time.LocalDate 0x67f1ca28 "2012-01-02"] 10.9 10.6 2.8 4.5 "rain"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -1017,13 +1017,13 @@ Rows as sequence of maps
 \end{Shaded}
 
 \begin{verbatim}
-({"date" #object[java.time.LocalDate 0x4cb0b376 "2012-01-01"],
+({"date" #object[java.time.LocalDate 0x3e270187 "2012-01-01"],
   "precipitation" 0.0,
   "temp_min" 5.0,
   "weather" "drizzle",
   "temp_max" 12.8,
   "wind" 4.7}
- {"date" #object[java.time.LocalDate 0x9ad412b "2012-01-02"],
+ {"date" #object[java.time.LocalDate 0x699d3239 "2012-01-02"],
   "precipitation" 10.9,
   "temp_min" 2.8,
   "weather" "rain",
@@ -2327,6 +2327,9 @@ Datatype groups are:
   \texttt{:type/datetime} - any datetime type
 \end{itemize}
 
+If qualified keyword starts with \texttt{:!type}, complement set is
+used.
+
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 To select all column names you can use \texttt{column-names} function.
@@ -2475,11 +2478,13 @@ function. Works only on a predicate.
 \begin{Highlighting}[]
 \NormalTok{(api/column-names DS (}\KeywordTok{complement}\NormalTok{ #\{}\AttributeTok{:V1}\NormalTok{\}))}
 \NormalTok{(api/column-names DS (}\KeywordTok{complement}\NormalTok{ #\{}\AttributeTok{:float64}\NormalTok{\}) }\AttributeTok{:datatype}\NormalTok{)}
+\NormalTok{(api/column-names DS :!type/float64)}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
 (:V2 :V3 :V4)
+(:V1 :V2 :V4)
 (:V1 :V2 :V4)
 \end{verbatim}
 
@@ -2738,7 +2743,7 @@ You can also pass mapping function with optional columns-selector
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@2161a500}{\nolinkurl{java.lang.Object@2161a500}}\tabularnewline
+\href{mailto:java.lang.Object@62fb4d4d}{\nolinkurl{java.lang.Object@62fb4d4d}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5000 & A\tabularnewline
@@ -2832,7 +2837,7 @@ Function works on grouped dataset
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@48f2320d}{\nolinkurl{java.lang.Object@48f2320d}}\tabularnewline
+\href{mailto:java.lang.Object@d35b8f8}{\nolinkurl{java.lang.Object@d35b8f8}}\tabularnewline
 \midrule
 \endhead
 1 & 1 & 0.5000 & A\tabularnewline
@@ -2848,7 +2853,7 @@ v1 & v2 & {[}1 2 3{]} &
 \begin{longtable}[]{@{}llll@{}}
 \toprule
 v1 & v2 & {[}1 2 3{]} &
-\href{mailto:java.lang.Object@48f2320d}{\nolinkurl{java.lang.Object@48f2320d}}\tabularnewline
+\href{mailto:java.lang.Object@d35b8f8}{\nolinkurl{java.lang.Object@d35b8f8}}\tabularnewline
 \midrule
 \endhead
 2 & 2 & 1.000 & B\tabularnewline
@@ -2940,15 +2945,15 @@ Replace one column (column is trimmed)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-0.1100 & 1 & 0.5000 & A\tabularnewline
-0.8447 & 2 & 1.000 & B\tabularnewline
-0.8681 & 3 & 1.500 & C\tabularnewline
-0.3387 & 4 & 0.5000 & A\tabularnewline
-0.05735 & 5 & 1.000 & B\tabularnewline
-0.7820 & 6 & 1.500 & C\tabularnewline
-0.007467 & 7 & 0.5000 & A\tabularnewline
-0.7730 & 8 & 1.000 & B\tabularnewline
-0.7104 & 9 & 1.500 & C\tabularnewline
+0.4874 & 1 & 0.5000 & A\tabularnewline
+0.2091 & 2 & 1.000 & B\tabularnewline
+0.9709 & 3 & 1.500 & C\tabularnewline
+0.5545 & 4 & 0.5000 & A\tabularnewline
+0.4777 & 5 & 1.000 & B\tabularnewline
+0.5476 & 6 & 1.500 & C\tabularnewline
+0.1964 & 7 & 0.5000 & A\tabularnewline
+0.5035 & 8 & 1.000 & B\tabularnewline
+0.6301 & 9 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3313,15 +3318,15 @@ map.
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 5 & 0.5000 & A\tabularnewline
-2 & 4 & 1.000 & B\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
-2 & 1 & 0.5000 & A\tabularnewline
-1 & 7 & 1.000 & B\tabularnewline
-2 & 9 & 1.500 & C\tabularnewline
 1 & 2 & 0.5000 & A\tabularnewline
-2 & 6 & 1.000 & B\tabularnewline
-1 & 8 & 1.500 & C\tabularnewline
+2 & 3 & 1.000 & B\tabularnewline
+1 & 4 & 1.500 & C\tabularnewline
+2 & 8 & 0.5000 & A\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
+1 & 9 & 0.5000 & A\tabularnewline
+2 & 1 & 1.000 & B\tabularnewline
+1 & 7 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -3671,7 +3676,7 @@ Double array conversion.
 \end{Shaded}
 
 \begin{verbatim}
-#object["[J" 0x7908b1fd "[J@7908b1fd"]
+#object["[J" 0xb075a1f "[J@b075a1f"]
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3687,7 +3692,7 @@ Function also works on grouped dataset
 \end{Shaded}
 
 \begin{verbatim}
-(#object["[J" 0x54a11645 "[J@54a11645"] #object["[J" 0x2f2961ef "[J@2f2961ef"] #object["[J" 0x700b1f72 "[J@700b1f72"])
+(#object["[J" 0x36ed0913 "[J@36ed0913"] #object["[J" 0x7e853e07 "[J@7e853e07"] #object["[J" 0x28e69000 "[J@28e69000"])
 \end{verbatim}
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
@@ -3702,8 +3707,8 @@ You can also cast the type to the other one (if casting is possible):
 \end{Shaded}
 
 \begin{verbatim}
-#object["[Ljava.lang.String;" 0x3208a01a "[Ljava.lang.String;@3208a01a"]
-#object["[F" 0x290c2b86 "[F@290c2b86"]
+#object["[Ljava.lang.String;" 0x7b94cdf1 "[Ljava.lang.String;@7b94cdf1"]
+#object["[F" 0x6090067c "[F@6090067c"]
 \end{verbatim}
 
 \subsubsection{Rows}\label{rows}
@@ -3976,7 +3981,7 @@ Random row (single)
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 4 & 0.5000 & A\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4018,15 +4023,15 @@ Random \texttt{n} (default: row count) rows with repetition.
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 7 & 0.5000 & A\tabularnewline
 1 & 9 & 1.500 & C\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
 1 & 9 & 1.500 & C\tabularnewline
 2 & 4 & 0.5000 & A\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
 1 & 3 & 1.500 & C\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4047,11 +4052,11 @@ Five random rows with repetition
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4072,11 +4077,11 @@ Five random, non-repeating rows
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-1 & 9 & 1.500 & C\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
 1 & 3 & 1.500 & C\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4122,15 +4127,15 @@ Shuffle dataset
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 8 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
 1 & 7 & 0.5000 & A\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
 2 & 6 & 1.500 & C\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -4309,20 +4314,20 @@ Select 5 random rows from each group
 \midrule
 \endhead
 2 & 4 & 0.5000 & A\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
 1 & 1 & 0.5000 & A\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
 2 & 4 & 0.5000 & A\tabularnewline
 2 & 8 & 1.000 & B\tabularnewline
 2 & 8 & 1.000 & B\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
 2 & 2 & 1.000 & B\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
 1 & 3 & 1.500 & C\tabularnewline
 2 & 6 & 1.500 & C\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
 2 & 6 & 1.500 & C\tabularnewline
+1 & 9 & 1.500 & C\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -5109,8 +5114,8 @@ Random
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -8609,10 +8614,10 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :y1 & :y2 & :z1 & :z2\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 0.3920 & 0.07961 & 3 & -2\tabularnewline
-2 & 1 & 1 & 0.3027 & 0.4799 & 3 & -2\tabularnewline
-3 & 0 & 1 & 0.8467 & 0.4334 & 3 & -2\tabularnewline
-4 & 0 & 1 & 0.3476 & 0.1776 & 3 & -2\tabularnewline
+1 & 1 & 0 & 0.3787 & 0.1645 & 3 & -2\tabularnewline
+2 & 1 & 1 & 0.6328 & 0.2104 & 3 & -2\tabularnewline
+3 & 0 & 1 & 0.5716 & 0.7286 & 3 & -2\tabularnewline
+4 & 0 & 1 & 0.6819 & 0.2572 & 3 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -8630,14 +8635,14 @@ data/anscombe.csv {[}44 3{]}:
 :x & :a & :b & :times & y & z\tabularnewline
 \midrule
 \endhead
-1 & 1 & 0 & 1 & 0.3920 & 3\tabularnewline
-2 & 1 & 1 & 1 & 0.3027 & 3\tabularnewline
-3 & 0 & 1 & 1 & 0.8467 & 3\tabularnewline
-4 & 0 & 1 & 1 & 0.3476 & 3\tabularnewline
-1 & 1 & 0 & 2 & 0.07961 & -2\tabularnewline
-2 & 1 & 1 & 2 & 0.4799 & -2\tabularnewline
-3 & 0 & 1 & 2 & 0.4334 & -2\tabularnewline
-4 & 0 & 1 & 2 & 0.1776 & -2\tabularnewline
+1 & 1 & 0 & 1 & 0.3787 & 3\tabularnewline
+2 & 1 & 1 & 1 & 0.6328 & 3\tabularnewline
+3 & 0 & 1 & 1 & 0.5716 & 3\tabularnewline
+4 & 0 & 1 & 1 & 0.6819 & 3\tabularnewline
+1 & 1 & 0 & 2 & 0.1645 & -2\tabularnewline
+2 & 1 & 1 & 2 & 0.2104 & -2\tabularnewline
+3 & 0 & 1 & 2 & 0.7286 & -2\tabularnewline
+4 & 0 & 1 & 2 & 0.2572 & -2\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -10579,30 +10584,30 @@ null {[}27 4{]}:
 \midrule
 \endhead
 1 & 9 & 1.500 & C\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
 2 & 4 & 0.5000 & A\tabularnewline
 2 & 2 & 1.000 & B\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
 2 & 8 & 1.000 & B\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
 1 & 3 & 1.500 & C\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-1 & 7 & 0.5000 & A\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
 2 & 2 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+2 & 2 & 1.000 & B\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+1 & 1 & 0.5000 & A\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
 1 & 5 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
-1 & 1 & 0.5000 & A\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -10660,14 +10665,14 @@ union {[}9 4{]}:
 \midrule
 \endhead
 1 & 9 & 1.500 & C\tabularnewline
-2 & 6 & 1.500 & C\tabularnewline
 1 & 1 & 0.5000 & A\tabularnewline
-2 & 8 & 1.000 & B\tabularnewline
 2 & 2 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 3 & 1.500 & C\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
+2 & 8 & 1.000 & B\tabularnewline
 1 & 7 & 0.5000 & A\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+2 & 6 & 1.500 & C\tabularnewline
+1 & 5 & 1.000 & B\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -12799,9 +12804,9 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 2 & 1.000 & B\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
 2 & 8 & 1.000 & B\tabularnewline
-2 & 2 & 1.000 & B\tabularnewline
+1 & 3 & 1.500 & C\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -12818,11 +12823,11 @@ Other filters
 :V1 & :V2 & :V3 & :V4\tabularnewline
 \midrule
 \endhead
-2 & 2 & 1.000 & B\tabularnewline
-2 & 4 & 0.5000 & A\tabularnewline
-1 & 5 & 1.000 & B\tabularnewline
-1 & 9 & 1.500 & C\tabularnewline
 2 & 8 & 1.000 & B\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
+2 & 4 & 0.5000 & A\tabularnewline
+1 & 7 & 0.5000 & A\tabularnewline
 \bottomrule
 \end{longtable}
 
