tmd bump, reshape tests and fixes

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2394,7 +2394,7 @@ Arguments:
 * options:
     - `:target-columns` - names of the columns created or columns pattern (see below) (default: `:$column`)
     - `:value-column-name` - name of the column for values (default: `:$value`)
-    - `:splitter` - regular expression or function which splits source column names into data
+    - `:splitter` - string, regular expression or function which splits source column names into data
     - `:drop-missing?` - remove rows with missing? (default: `:true`)
     - `:datatypes` - map of target columns data types
 
@@ -2426,7 +2426,7 @@ Convert only columns starting with `"wk"` and pack them into `:week` column, val
 
 ```{clojure results="hide"}
 (def bilboard (-> (api/dataset "data/billboard.csv.gz")
-                  (api/drop-columns #(= :boolean %) :datatype))) ;; drop some boolean columns, tidyr just skips them
+                  (api/drop-columns :type/boolean))) ;; drop some boolean columns, tidyr just skips them
 ```
 
 ```{clojure results="asis"}
@@ -2488,7 +2488,7 @@ family
 
 ```{clojure results="asis"}
 (api/pivot->longer family (complement #{"family"}) {:target-columns [nil :child]
-                                                    :splitter #(clojure.string/split % #"_")
+                                                    :splitter "_"
                                                     :datatypes {"gender" :int16}})
 ```
 
@@ -2793,8 +2793,6 @@ Conversion 2 - Convert to longer form and back and rename columns
     (api/rename-columns (zipmap (vals construction-unit-map)
                                 (keys construction-unit-map))))
 ```
-
----
 
 ---
 
